--- a/CakesMVC/Views/Shared/_Layout.cshtml
+++ b/CakesMVC/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Gallery", "Index", "Cake")</li>
-                    <li>@Html.ActionLink("Email Us", "Index", "Email")</li>
+                    <li>@Html.ActionLink("Join", "Index", "Email")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
