--- a/CakesMVC/Views/Email/Index.cshtml
+++ b/CakesMVC/Views/Email/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿@model CakesMVC.Model.Email
 <form method="post">
     <br />
-    <h2>  Email Us  </h2>
+    <h2>Join Our Mailing List</h2>
     <div class="well">
-        <b>@Html.LabelFor(x => x.From):</b>  @Html.TextBoxFor(x => x.From, new { @class = "form-control" }) <br />
-        <b>@Html.LabelFor(x => x.Subject):</b>  @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" }) <br />
-        <b>@Html.LabelFor(x => x.Body):</b>  @Html.TextAreaFor(x => x.Body, 12, 20, new { @class = "form-control" }) <br />
-        <button type="submit" class="btn btn-default">Submit</button>
+        @*
+            <b>@Html.LabelFor(x => x.From):</b>  @Html.TextBoxFor(x => x.From, new { @class = "form-control" }) <br />
+            <b>@Html.LabelFor(x => x.Subject):</b>  @Html.TextBoxFor(x => x.Subject, new { @class = "form-control" }) <br />
+            <b>@Html.LabelFor(x => x.Body):</b>  @Html.TextAreaFor(x => x.Body, 12, 20, new { @class = "form-control" }) <br />
+        *@
+        @Html.Label("Enter your email address:")
+        @Html.TextBoxFor(x => x.Subscriber, new { @class = "form-control" })<br />
+        <button type="submit" class="btn btn-default">Subscribe</button><br /><br />
+        <h3>@ViewBag.Message</h3>
     </div>
 </form>
 
