--- a/CakesMVC/Views/Home/AddAlbum.cshtml
+++ b/CakesMVC/Views/Home/AddAlbum.cshtml
@@ -1,10 +1,12 @@
-﻿@model CakesMVC.Model.Album
+﻿@model CakesMVC.Models.AlbumViewModel
 <br />
 <!-- Button trigger modal -->
 <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
     @ViewBag.Message
-</button>
-
+</button><br />
+<div style="color:red">
+    <h4>@ViewBag.ErrorMessage</h4>
+</div>
 <form method="post">
     <!-- Modal -->
     <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
@@ -15,18 +17,19 @@
                     <h4 class="modal-title" id="myModalLabel">Enter an album title:</h4>
                 </div>
                 <div class="modal-body">
-                    <p>@Html.LabelFor(x => x.Title): @Html.TextBoxFor(x => x.Title)</p>
+                    @Html.LabelFor(x => x.Title): @Html.TextBoxFor(x => x.Title)
+                    <div style="color:red">
+                        @Html.ValidationMessageFor(x => x.Title)
+                    </div><br /><br />
+                    @Html.LabelFor(x => x.Thumbnails):
+                    @Html.DropDownListFor(x => x.Thumbnail, new SelectList(Model.Thumbnails, "Source", "Name", Model.Thumbnails.First().Source));
                     @Html.HiddenFor(x => x.AlbumId)
-                    @Html.HiddenFor(x => x.Thumbnail)
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-
                     <button type="submit" class="btn btn-primary">Save</button>
                 </div>
             </div>
         </div>
     </div>
 </form>
-
-
